// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelect Component render renders a creatable MultiSelect correctly 1`] = `
Array [
  "",
  <div
    className="css-1uaxyv0"
    onKeyDown={[Function]}
  >
    <div
      className="css-1x82eel multiselect__control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="css-muz1ku multiselect__value-container multiselect__value-container--is-multi"
      >
        <div
          className="css-1hhip29 multiselect__placeholder"
        >
          Select...
        </div>
        <div
          className="css-12b6hd8"
        >
          <div
            className="multiselect__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-13-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-1wy0on6 multiselect__indicators"
      >
        <span
          className="css-lmh8e7 multiselect__indicator-separator"
        />
        <div
          aria-hidden="true"
          className="css-d5u8hy multiselect__indicator multiselect__dropdown-indicator"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <i
            className="lp-icon css-166paje"
          >
            search
          </i>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`MultiSelect Component render renders a static MultiSelect correctly 1`] = `
Array [
  "",
  <div
    className="css-1uaxyv0"
    onKeyDown={[Function]}
  >
    <div
      className="css-1x82eel multiselect__control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="css-71wpy1 multiselect__value-container multiselect__value-container--is-multi"
      >
        <div
          className="css-1hhip29 multiselect__placeholder"
        >
          Select...
        </div>
        <input
          className="css-14uuagi"
          disabled={false}
          id="react-select-10-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className="css-1wy0on6 multiselect__indicators"
      >
        <span
          className="css-lmh8e7 multiselect__indicator-separator"
        />
        <div
          aria-hidden="true"
          className="css-d5u8hy multiselect__indicator multiselect__dropdown-indicator"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <i
            className="lp-icon css-18k9irk"
          >
            down_angle
          </i>
        </div>
      </div>
    </div>
  </div>,
]
`;
